// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros basic usage: basic usage 1`] = `
"
import wcImport from \\"../macro\\";
const asyncModule = wcImport(\\"./MyComponent\\");

      ↓ ↓ ↓ ↓ ↓ ↓

const asyncModule = import(
  /* webpackChunkName: MyComponent */
  \\"./MyComponent\\"
);

"
`;

exports[`macros no usage: no usage 1`] = `
"
import wcImport from \\"../macro\\";

      ↓ ↓ ↓ ↓ ↓ ↓


"
`;
